--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-index.html
+<!DOCTYPE html>
+<html>
+<body>
+	<form id="testForm">
+		<input type="text" name="firstname"/>
+		<input type="text" name="lastname"/>
+		<input type="email" name="email"/>
+		<input type="password" name="password"/>
+		<input type="password" name="passwordconfirmation"/>
+		<input type="text" name="creditcard"/>
+		<input type="checkbox" name="optIn"/>
+		<input type="submit" name="submit"/>
+	</form>
+</body>
+</html>
