--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
+
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+
 <body>
-	<form id="testForm">
-		<input type="text" name="firstname"/>
-		<input type="text" name="lastname"/>
-		<input type="email" name="email"/>
-		<input type="password" name="password"/>
-		<input type="password" name="passwordconfirmation"/>
-		<input type="text" name="creditcard"/>
-		<input type="checkbox" name="optIn"/>
-		<input type="submit" name="submit"/>
-	</form>
+	<div class="form-container">
+		<form id="testForm">
+			<input type="text" name="firstname"/>
+			<input type="text" name="lastname"/>
+			<input type="email" name="email"/>
+			<input type="password" name="password"/>
+			<input type="password" name="passwordconfirmation"/>
+			<input type="text" name="creditcard"/>
+			<input type="checkbox" name="optIn"/>
+			<input type="submit" name="submit"/>
+		</form>
+	</div>
 </body>
 </html>
