Decorated form page.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
 	<div class="form-container">
+		<h1>Sign Up</h1>
 		<form id="testForm">
 			<input type="text" name="firstname"/>
 			<input type="text" name="lastname"/>
@@ -14,8 +15,7 @@
 			<input type="password" name="password"/>
 			<input type="password" name="passwordconfirmation"/>
 			<input type="text" name="creditcard"/>
-			<input type="checkbox" name="optIn"/>
-			<input type="submit" name="submit"/>
+			<input type="submit" value="Submit"/>
 		</form>
 	</div>
 </body>
