Testing form validation.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="form-container">
 		<h1>Sign Up</h1>
 		<form id="testForm">
-			<input type="text" name="firstname"/>
+			<input id="firstname" type="text" name="firstname"/>
 			<input type="text" name="lastname"/>
 			<input type="email" name="email"/>
 			<input type="password" name="password"/>
@@ -18,5 +18,12 @@
 			<input type="submit" value="Submit"/>
 		</form>
 	</div>
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
