--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
 	<div class="form-container">
 		<h1>Sign Up</h1>
 		<form id="testForm">
-			<input id="firstname" type="text" name="firstname"/>
-			<input type="text" name="lastname"/>
+			<input id="firstName" type="text" name="firstname" required/>
+			<input id="lastName" type="text" name="lastname"/>
 			<input type="email" name="email"/>
 			<input type="password" name="password"/>
 			<input type="password" name="passwordconfirmation"/>
 			<input type="text" name="creditcard"/>
 			<input type="submit" value="Submit"/>
 		</form>
+		<div id="errorMessageBox">
+			Error! Missing: 
+			<span id="missingVariable"></span>
+		</div>
 	</div>
 
 
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="js/main.js"></script>
+<script src="JS/main.js"></script>
 
 </body>
 </html>
